--- a/proyecto3/myshopappclient/package.json
+++ b/proyecto3/myshopappclient/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^14.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
